k3d-github/.kubefirst/clusters/mgmt-template/components/development/metaphor-frontend/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-development-ingress
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metaphor-frontend-development.<DOMAIN_NAME>`)
      services:
        - name: metaphor-frontend-development
          port: 80
  tls:
    secretName: metaphor-development-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: development
spec:
  redirectScheme:
    scheme: https
    permanent: true
